[project]
name = "email-triage-env"
version = "0.1.0"
description = "Email triage RL environment"
authors = [{ name = "Maanya" }]

dependencies = [
  "fastapi",
  "uvicorn",
  "numpy",
  "pillow",
  "openai",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
